FreedomLessLessAtribParser.java
// Generated from FreedomLessLessAtrib.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class SymbolEntry
{
	public String _type; //! func, attr, class
	public String _id;

	public String _class_scope;
	public String _function_scope;
	
	public String _permission;

	public String[] _features;

	public boolean _valid;
};

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FreedomLessLessAtribParser extends Parser {

	private static SymbolEntry[] _symbolTable;

	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, INT_T=2, UNSIGNED_T=3, FLOAT_T=4, DOUBLE_T=5, SHORT_T=6, CHAR_T=7, 
		BOOL_T=8, VOID_T=9, IMPORT=10, CLASS=11, PUBLIC=12, PRIVATE=13, MAIN=14, 
		IF=15, ELSE=16, FOR=17, WHILE=18, SWITCH=19, CASE=20, BREAK=21, CONTINUE=22, 
		DEFAULT=23, RETURN=24, NEW=25, FREE=26, MALLOC=27, DELETE=28, SIZEOF=29, 
		ASSIGN=30, PLUS=31, MINUS=32, MULT=33, DIV=34, REF=35, ARROW=36, INCREM=37, 
		DECREM=38, AUTOPLUS=39, AUTOMINUS=40, AUTOMULT=41, AUTODIV=42, LESS=43, 
		BIGGER=44, LESS_EQ=45, BIGGER_EQ=46, EQUALS=47, NOT_EQUALS=48, AND=49, 
		OR=50, OPEN_PAR=51, CLOSE_PAR=52, OPEN_KEY=53, CLOSE_KEY=54, OPEN_BRAK=55, 
		CLOSE_BRAK=56, COMMA=57, SEMICOLON=58, TWOPOINTS=59, NULL=60, INT=61, 
		INTEGER=62, BOOLEAN=63, STRING=64, CHAR=65, FLOATING=66, ID=67, COMMENT=68, 
		WS=69, LINE_COMMENT=70;
	public static final int
		RULE_program_def = 0, RULE_import_def = 1, RULE_class_def = 2, RULE_class_members_def = 3, 
		RULE_public_def = 4, RULE_private_def = 5, RULE_class_scope_def = 6, RULE_attribute_def = 7, 
		RULE_valued_expression_def = 8, RULE_operation = 9, RULE_function_call_def = 10, 
		RULE_argument_def = 11, RULE_function_def = 12, RULE_param_def = 13, RULE_block_def = 14, 
		RULE_valueless_expression_def = 15, RULE_struct_def = 16, RULE_if_def = 17, 
		RULE_for_def = 18, RULE_valued_attribute_def = 19, RULE_while_def = 20, 
		RULE_switch_def = 21, RULE_switch_case_def = 22, RULE_switch_default_def = 23, 
		RULE_main_def = 24, RULE_type_def = 25, RULE_value_def = 26, RULE_logical_op = 27, 
		RULE_arithmetic_op = 28, RULE_auto_assign_op = 29, RULE_auto_increm_op = 30;
	public static final String[] ruleNames = {
		"program_def", "import_def", "class_def", "class_members_def", "public_def", 
		"private_def", "class_scope_def", "attribute_def", "valued_expression_def", 
		"operation", "function_call_def", "argument_def", "function_def", "param_def", 
		"block_def", "valueless_expression_def", "struct_def", "if_def", "for_def", 
		"valued_attribute_def", "while_def", "switch_def", "switch_case_def", 
		"switch_default_def", "main_def", "type_def", "value_def", "logical_op", 
		"arithmetic_op", "auto_assign_op", "auto_increm_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'int'", "'unsigned'", "'float'", "'double'", "'short'", 
		"'char'", "'bool'", "'void'", "'import'", "'class'", null, null, "'main'", 
		"'if'", "'else'", "'for'", "'while'", "'switch'", "'case'", "'break'", 
		"'continue'", "'default'", "'return'", "'new'", "'free'", "'malloc'", 
		"'delete'", "'sizeof'", "'='", "'+'", "'-'", "'*'", "'/'", "'&'", "'->'", 
		"'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'&&'", "'||'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "','", "';'", "':'", "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "INT_T", "UNSIGNED_T", "FLOAT_T", "DOUBLE_T", "SHORT_T", "CHAR_T", 
		"BOOL_T", "VOID_T", "IMPORT", "CLASS", "PUBLIC", "PRIVATE", "MAIN", "IF", 
		"ELSE", "FOR", "WHILE", "SWITCH", "CASE", "BREAK", "CONTINUE", "DEFAULT", 
		"RETURN", "NEW", "FREE", "MALLOC", "DELETE", "SIZEOF", "ASSIGN", "PLUS", 
		"MINUS", "MULT", "DIV", "REF", "ARROW", "INCREM", "DECREM", "AUTOPLUS", 
		"AUTOMINUS", "AUTOMULT", "AUTODIV", "LESS", "BIGGER", "LESS_EQ", "BIGGER_EQ", 
		"EQUALS", "NOT_EQUALS", "AND", "OR", "OPEN_PAR", "CLOSE_PAR", "OPEN_KEY", 
		"CLOSE_KEY", "OPEN_BRAK", "CLOSE_BRAK", "COMMA", "SEMICOLON", "TWOPOINTS", 
		"NULL", "INT", "INTEGER", "BOOLEAN", "STRING", "CHAR", "FLOATING", "ID", 
		"COMMENT", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	public static String[] SymbolsTable

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FreedomLessLessAtrib.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FreedomLessLessAtribParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Program_defContext extends ParserRuleContext {
		public Import_defContext import_def() {
			return getRuleContext(Import_defContext.class,0);
		}
		public List<Class_defContext> class_def() {
			return getRuleContexts(Class_defContext.class);
		}
		public Class_defContext class_def(int i) {
			return getRuleContext(Class_defContext.class,i);
		}
		public List<Function_defContext> function_def() {
			return getRuleContexts(Function_defContext.class);
		}
		public Function_defContext function_def(int i) {
			return getRuleContext(Function_defContext.class,i);
		}
		public Main_defContext main_def() {
			return getRuleContext(Main_defContext.class,0);
		}
		public Program_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterProgram_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitProgram_def(this);
		}
	}

	public final Program_defContext program_def() throws RecognitionException {
		Program_defContext _localctx = new Program_defContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program_def);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(62);
				import_def();
				}
			}

			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					class_def();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(71);
					function_def();
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VOID_T) {
				{
				setState(77);
				main_def();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_defContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(FreedomLessLessAtribParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(FreedomLessLessAtribParser.IMPORT, i);
		}
		public List<TerminalNode> STRING() { return getTokens(FreedomLessLessAtribParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(FreedomLessLessAtribParser.STRING, i);
		}
		public Import_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterImport_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitImport_def(this);
		}
	}

	public final Import_defContext import_def() throws RecognitionException {
		Import_defContext _localctx = new Import_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				match(IMPORT);
				setState(81);
				match(STRING);
				setState(82);
				if (!(still_not_imported(STRING.val))) throw new FailedPredicateException(this, "still_not_imported(STRING.val)");
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_defContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(FreedomLessLessAtribParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(FreedomLessLessAtribParser.ID, 0); }
		public TerminalNode OPEN_KEY() { return getToken(FreedomLessLessAtribParser.OPEN_KEY, 0); }
		public Class_members_defContext class_members_def() {
			return getRuleContext(Class_members_defContext.class,0);
		}
		public TerminalNode CLOSE_KEY() { return getToken(FreedomLessLessAtribParser.CLOSE_KEY, 0); }
		public Class_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterClass_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitClass_def(this);
		}
	}

	public final Class_defContext class_def() throws RecognitionException {
		Class_defContext _localctx = new Class_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(CLASS);
			setState(88);
			match(ID);
			setState(89);
			match(OPEN_KEY);
			setState(90);
			class_members_def();
			setState(91);
			match(CLOSE_KEY);
			setState(92);
			if (!(class_free_name(ID))) throw new FailedPredicateException(this, "class_free_name(ID)");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_members_defContext extends ParserRuleContext {
		public Private_defContext private_def() {
			return getRuleContext(Private_defContext.class,0);
		}
		public Public_defContext public_def() {
			return getRuleContext(Public_defContext.class,0);
		}
		public Class_members_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_members_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterClass_members_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitClass_members_def(this);
		}
	}

	public final Class_members_defContext class_members_def() throws RecognitionException {
		Class_members_defContext _localctx = new Class_members_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_members_def);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRIVATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				private_def();
				}
				break;
			case PUBLIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				public_def();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE) {
					{
					setState(96);
					private_def();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Public_defContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(FreedomLessLessAtribParser.PUBLIC, 0); }
		public Class_scope_defContext class_scope_def() {
			return getRuleContext(Class_scope_defContext.class,0);
		}
		public Public_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_public_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterPublic_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitPublic_def(this);
		}
	}

	public final Public_defContext public_def() throws RecognitionException {
		Public_defContext _localctx = new Public_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_public_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(PUBLIC);
			setState(102);
			class_scope_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Private_defContext extends ParserRuleContext {
		public TerminalNode PRIVATE() { return getToken(FreedomLessLessAtribParser.PRIVATE, 0); }
		public Class_scope_defContext class_scope_def() {
			return getRuleContext(Class_scope_defContext.class,0);
		}
		public Private_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_private_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterPrivate_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitPrivate_def(this);
		}
	}

	public final Private_defContext private_def() throws RecognitionException {
		Private_defContext _localctx = new Private_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_private_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(PRIVATE);
			setState(105);
			class_scope_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_scope_defContext extends ParserRuleContext {
		public List<Attribute_defContext> attribute_def() {
			return getRuleContexts(Attribute_defContext.class);
		}
		public Attribute_defContext attribute_def(int i) {
			return getRuleContext(Attribute_defContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(FreedomLessLessAtribParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FreedomLessLessAtribParser.SEMICOLON, i);
		}
		public List<Function_defContext> function_def() {
			return getRuleContexts(Function_defContext.class);
		}
		public Function_defContext function_def(int i) {
			return getRuleContext(Function_defContext.class,i);
		}
		public Class_scope_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_scope_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterClass_scope_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitClass_scope_def(this);
		}
	}

	public final Class_scope_defContext class_scope_def() throws RecognitionException {
		Class_scope_defContext _localctx = new Class_scope_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_scope_def);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			class_scope_def.scope = father.scope
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					attribute_def();
					setState(109);
					match(SEMICOLON);
					attribute_def.scope = class_scope_def.scope
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_T) | (1L << UNSIGNED_T) | (1L << FLOAT_T) | (1L << DOUBLE_T) | (1L << SHORT_T) | (1L << CHAR_T) | (1L << BOOL_T) | (1L << VOID_T) | (1L << CLASS))) != 0)) {
				{
				{
				setState(117);
				function_def();
				function_def.scope = class_scope_def.scope
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attribute_defContext extends ParserRuleContext {
		public Type_defContext type_def() {
			return getRuleContext(Type_defContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(FreedomLessLessAtribParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FreedomLessLessAtribParser.ID, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(FreedomLessLessAtribParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(FreedomLessLessAtribParser.ASSIGN, i);
		}
		public List<Valued_expression_defContext> valued_expression_def() {
			return getRuleContexts(Valued_expression_defContext.class);
		}
		public Valued_expression_defContext valued_expression_def(int i) {
			return getRuleContext(Valued_expression_defContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FreedomLessLessAtribParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FreedomLessLessAtribParser.COMMA, i);
		}
		public List<TerminalNode> OPEN_BRAK() { return getTokens(FreedomLessLessAtribParser.OPEN_BRAK); }
		public TerminalNode OPEN_BRAK(int i) {
			return getToken(FreedomLessLessAtribParser.OPEN_BRAK, i);
		}
		public List<TerminalNode> INT() { return getTokens(FreedomLessLessAtribParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(FreedomLessLessAtribParser.INT, i);
		}
		public List<TerminalNode> CLOSE_BRAK() { return getTokens(FreedomLessLessAtribParser.CLOSE_BRAK); }
		public TerminalNode CLOSE_BRAK(int i) {
			return getToken(FreedomLessLessAtribParser.CLOSE_BRAK, i);
		}
		public List<TerminalNode> MULT() { return getTokens(FreedomLessLessAtribParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(FreedomLessLessAtribParser.MULT, i);
		}
		public Attribute_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).enterAttribute_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FreedomLessLessAtribListener ) ((FreedomLessLessAtribListener)listener).exitAttribute_def(this);
		}
	}
